# sentio-rust-sdk

./: .gitignore  Cargo.toml  README.md  sentio-sdk-ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.kiro/specs/sentio-cli-enhancement/: design.md  requirements.md  tasks.md
cli/: Cargo.toml
cli/examples/: global-config.yaml  sentio.yaml
cli/src/: codegen.rs  lib.rs  main.rs
cli/src/commands/: auth.rs  build.rs  contract.rs  gen.rs  generate.rs  init.rs  mod.rs  test.rs  upload.rs
cli/src/utils/: api_client.rs  config.rs  host_config.rs  mod.rs  oauth.rs  storage.rs  templates.rs  test_runner.rs  tool_validator.rs  validator.rs
cli/templates/eth-empty/: Cargo.toml  README.md  build.rs  schema.graphql
cli/templates/eth-empty/src/: lib.rs  main.rs  processor.rs
examples/eth-basic/: Cargo.toml  Cross.toml  README.md  build.rs  schema.graphql
examples/eth-basic/src/: lib.rs  main.rs  processor.rs
examples/eth-basic/src/entities/: account.rs  approval.rs  dailystats.rs  mod.rs  tokencontract.rs  transfer.rs
examples/eth-basic/tests/: processor_test.rs
examples/eth-decode-log/: Cargo.toml  Cross.toml  README.md  build.rs  schema.graphql
examples/eth-decode-log/src/: abi_client.rs  bench.rs  main.rs  processor.rs
sdk/: Cargo.toml  build.rs  processor.proto
sdk/service/common/protos/: common.proto
sdk/src/: codegen.rs  default_handler.rs  lib.rs  server.rs  server_test.rs  service.rs
sdk/src/core/: benchmark.rs  context.rs  conversions.rs  event_logger.rs  event_types.rs  handler_register.rs  metrics.rs  mod.rs  plugin.rs  plugin_manager.rs  processor.rs  profiling.rs
sdk/src/entity/: mod.rs  serialization.rs  traits.rs  types.rs
sdk/src/entity/codegen/: entity_gen.rs  generator.rs  mod.rs
sdk/src/entity/schema/: mod.rs  parser.rs  types.rs  validation.rs
sdk/src/entity/store/: backend.rs  context.rs  mod.rs  store.rs
sdk/src/eth/: context.rs  eth_plugin.rs  eth_processor.rs  eth_types.rs  handler_type.rs  mod.rs  plugin.rs  processor.rs
sdk/src/eth/tests/: mod.rs  test_processor.rs
sdk/src/testing/: memory_database.rs  mod.rs  test_processor_server.rs  test_provider.rs  utils.rs
sdk/src/testing/facets/: eth_facet.rs  mod.rs
sdk/tests/: direct_serde_test.rs
