[workspace]
resolver = "2"
members = [
    "cli",
    "sdk",
    "examples/eth-basic",
    "examples/eth-decode-log",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sentio"]
license = "MIT"
repository = "https://github.com/sentioxyz/sentio"
homepage = "https://sentio.xyz"
documentation = "https://docs.sentio.xyz"
keywords = ["blockchain", "web3", "ethereum", "analytics", "processor"]
categories = ["development-tools", "web-programming"]
