[workspace]
resolver = "2"
members = [
    "cli",
    "sdk",
    "examples/eth-basic",
    "examples/eth-decode-log",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sentio"]
license = "MIT"
repository = "https://github.com/sentioxyz/sentio"
homepage = "https://sentio.xyz"
documentation = "https://docs.sentio.xyz"
keywords = ["blockchain", "web3", "ethereum", "analytics", "processor"]
categories = ["development-tools", "web-programming"]

# Performance-optimized build profiles
[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"            # Link-time optimization for better performance
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Smaller binary, faster panic handling
strip = true           # Remove debug symbols for smaller binaries

[profile.release-with-debug]
inherits = "release"
debug = true           # Keep debug symbols for production debugging
strip = false

# Fast compilation profile for development with optimized dependencies
[profile.dev.package."*"]
opt-level = 2          # Optimize dependencies even in debug mode for better dev experience
