[package]
name = "sentio-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for compiling Sentio processors in Rust"

[[bin]]
name = "cargo-sentio"
path = "src/main.rs"
doctest = false

[dependencies]
sentio-sdk = { version = "0.1.0", path = "../sdk" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
# Login dependencies
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
warp = "0.3"
webbrowser = "1.0"
urlencoding = "2.1"
hex = "0.4"
gethostname = "0.5"
# Upload dependencies  
zip = "2.2"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.15"
