[package]
name = "sentio-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust SDK for building Sentio processors"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
tonic = { version = "0.14.1", features = ["gzip"] }
prost = "0.14.1"
prost-types = "0.14.1"
anyhow = "1.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
tonic-prost = "0.14.1"
ethers = { version = "2.0", features = ["abigen", "rustls"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
