[package]
name = "sentio-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust SDK for building Sentio processors"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
tonic = { version = "0.14.1", features = ["gzip"] }
prost = "0.14.1"
prost-types = "0.14.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tonic-prost = "0.14.1"
ethers = { version = "2.0", features = ["abigen", "rustls"] }

# Entity framework dependencies
graphql-parser = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
derive_builder = "0.20"
uuid = { version = "1.10", features = ["v4", "serde"] }
bytes = "1.8"
rust-codegen = "0.1.0"
async-promise = "0.1.0"
convert_case = "0.8.0"
num-bigint = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dashmap = "6.0"

[build-dependencies]
tonic-prost-build = "0.14.1"

[dev-dependencies]
tempfile = "3.12"
