[package]
name = "eth-basic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Basic Ethereum processor example using Sentio SDK"

[[bin]]
name = "eth-basic"
path = "src/main.rs"

[dependencies]
sentio-sdk = { path = "../../sdk" }
rust_decimal = "1.36"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.20"

[build-dependencies]
sentio-cli = { path = "../../cli" }
