[package]
name = "eth-decode-log"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ethereum log decoding processor using Sentio SDK"

[lib]
name = "eth_decode_log"
path = "src/lib.rs"

[[bin]]
name = "eth-decode-log"
path = "src/main.rs"
target = "x86_64-unknown-linux-musl"

[dependencies]
sentio-sdk = { path = "../../sdk" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
lru = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
ethers = { version = "2.0", features = ["abigen", "rustls"] }
derive_builder = "0.20"

[build-dependencies]
sentio-cli = { path = "../../cli" }