[package]
name = "eth-decode-log"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ethereum log decoding processor using Sentio SDK"

[lib]
name = "eth_decode_log"
path = "src/lib.rs"

[[bin]]
name = "eth-decode-log"
path = "src/main.rs"

[dependencies]
sentio-sdk = { path = "../../sdk" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
moka = { version = "0.12.10", features = ["sync"] }
tracing = "0.1"
alloy = {version = "1" , default-features = false, features = ["essentials"] }
derive_builder = "0.20"

[build-dependencies]
sentio-cli = { path = "../../cli" }
