[package]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "Sentio processor for Ethereum blockchain"

[lib]
name = "{{PROJECT_NAME_SNAKE}}"
path = "src/lib.rs"

[[bin]]
name = "{{PROJECT_NAME}}"
path = "src/main.rs"
target = "x86_64-unknown-linux-musl"

[dependencies]
sentio-sdk = { path = "../../sdk" }
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.20"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ethers = { version = "2.0", features = ["abigen", "rustls"] }

[build-dependencies]
sentio-cli = { path = "../../cli" }